--- a/.gitignore
+++ b/.gitignore
@@ -35,8 +35,4 @@ out/
 
 ### VS Code ###
 .vscode/
-<<<<<<< HEAD
-src/main/resources/application.yml
-=======
-src/main/resources/application.yml
->>>>>>> be512c33700a218deeac1242053d1c3fdd95aba7
+application-secret.yml
